# leviathan-crypto

./: .aider.conf.yml  .gitattributes  .gitignore  .npmignore  AGENTS.md  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  TASK.md  architectural-stance.md  asconfig.json  ctr_harness.c  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.claude/: CLAUDE.md
.cursor/rules/: agents.mdc
.github/: ci.Dockerfile  copilot-instructions.md
.github/workflows/: build.yml  ci-image.yml  e2e.yml  lint.yml  npm-remove.yml  publish.yml  release.yml  test-suite.yml  unit-aes-montecarlo.yml  unit-aes-siv.yml  unit-aes.yml  unit-argon2id.yml  unit-blake3.yml  unit-chacha20.yml  unit-core.yml  unit-curve25519.yml  unit-ed25519.yml  unit-fast.yml  unit-hashing.yml  unit-kyber.yml  unit-merkle.yml  unit-mldsa.yml  unit-mlkem.yml  unit-montecarlo-cbc.yml  unit-montecarlo-ecb.yml  unit-nessie.yml  unit-p256.yml  unit-pools.yml  unit-ratchet.yml  unit-serpent.yml  unit-sign-hybrid-classical.yml  unit-sign-hybrid.yml  unit-sign.yml  unit-slhdsa-acvp.yml  unit-slhdsa.yml  unit-stream.yml  unit-utils.yml  unit-x25519.yml  verify-vectors.yml  wiki.yml
.windsurf/rules/: agents.md
docs/: AGENTS.md  CLAUDE_consumer.md  Home.md  README.md  TESTING.md  aead.md  aes.md  aes_reference.md  architectural-stance.md  architecture.md  argon2id.md  asm_aes.md  asm_blake3.md  asm_chacha.md  asm_ct.md  asm_cte.md  asm_curve25519.md  asm_imports.md  asm_kyber.md  asm_mldsa.md  asm_mlkem.md  asm_p256.md  asm_serpent.md  asm_sha2.md  asm_sha3.md  asm_slhdsa.md  audits.md  benchmarks.md  blake3.md  blake3_audit.md  branding.md  cdn.md  chacha20.md  chacha20_pool.md  chacha_audit.md  chacha_reference.md  chacha_simd_bench.md  ciphersuite.md  csp.md  development.md  (+49 more)
scripts/: build-asm.js  build-asm.ts  build.ts  check.ts  copy-docs.ts  embed-wasm.ts  embed-workers.ts  gen-blake3-compress4-vectors.ts  gen-changelog.ts  gen-ecdsa-p256-vectors.ts  gen-ed25519-vectors.ts  gen-fortuna-vectors.ts  gen-hybrid-classical-vectors.ts  gen-hybrid-pq-vectors.ts  gen-merkle-blake3-vectors.ts  gen-mldsa-vectors.ts  gen-ratchet-vectors.ts  gen-seal-vectors.ts  gen-sealstream-v2-vectors.ts  gen-sealstream-vectors.ts  gen-sign-envelope-vectors.ts  gen-slhdsa-vectors.ts  gen-sth-vectors.ts  gen-streamencoder-vectors.ts  generate_simd.ts  lint-asm.js  lint-asm.ts  lint.ts  pack.ts  pin-actions.ts  test.ts
scripts/lib/: build-graph.ts  modules.ts  parallel.ts  test-groups.ts
scripts/verify-vectors/: Cargo.toml
scripts/verify-vectors/src/: aes.rs  aes_cbc.rs  aes_ctr.rs  aes_gcm.rs  aes_gcm_siv.rs  aes_seal.rs  blake3.rs  byte_diff.rs  ecdsa_p256.rs  ed25519.rs  hybrid_classical.rs  hybrid_pq.rs  kmac.rs  main.rs  merkle_blake3.rs  merkle_checkpoint.rs  merkle_cosig.rs  merkle_sha256.rs  mldsa.rs  mlkem.rs  parse.rs  polyval.rs  serpent.rs  sign_sth.rs  slhdsa.rs  x25519.rs  xchacha.rs
scripts/verify-vectors/src/primitives/: cbc.rs  hchacha20.rs  mod.rs  pkcs7.rs
src/asm/: tsconfig.json
src/asm/aes/: aes-gcm-siv.ts  aes.ts  buffers.ts  cbc.ts  cbc_simd.ts  ctr.ts  ctr_simd.ts  gcm.ts  gf128.ts  ghash.ts  index.ts  polyval.ts  sbox.ts  wipe.ts
src/asm/blake3/: buffers.ts  chunk.ts  chunk_simd.ts  compress.ts  compress_simd.ts  flags.ts  index.ts  tree.ts  tree_simd.ts
src/asm/chacha/: buffers.ts  chacha20.ts  chacha20_simd.ts  chacha20_simd_4x.ts  index.ts  wipe.ts
src/asm/chacha20/: buffers.ts  chacha20.ts  chacha20_simd_4x.ts  index.ts  poly1305.ts  wipe.ts
src/asm/ct/: index.ts
src/asm/cte/: index.ts  shared.ts
src/asm/curve25519/: buffers.ts  compress.ts  ed25519.ts  edwards.ts  edwards_simd.ts  field.ts  field_simd.ts  index.ts  montgomery.ts  scalar.ts  sha512.ts  x25519.ts
src/asm/kyber/: buffers.ts  cbd.ts  index.ts  ntt.ts  ntt_simd.ts  params.ts  poly.ts  poly_simd.ts  polyvec.ts  reduce.ts  sampling.ts  verify.ts
src/asm/mldsa/: buffers.ts  encoding.ts  index.ts  ntt.ts  ntt_simd.ts  params.ts  poly.ts  poly_simd.ts  polyvec.ts  reduce.ts  rounding.ts  sampling.ts
src/asm/mlkem/: buffers.ts  cbd.ts  index.ts  ntt.ts  ntt_simd.ts  params.ts  poly.ts  poly_simd.ts  polyvec.ts  reduce.ts  sampling.ts  verify.ts
src/asm/p256/: buffers.ts  ecdsa.ts  field.ts  (+7 more)
src/ts/: argon2id.ts  errors.ts  fortuna.ts  index.ts  init.ts  loader.ts  types.ts  utils.ts  wasm-source.ts
test/e2e/: chacha20.spec.ts  chacha20_simd.spec.ts  chacha20_simd_bench.spec.ts  chacha20poly1305.spec.ts  fortuna.spec.ts  globals.d.ts  hmac.spec.ts  kyber_suite.spec.ts  loader.spec.ts  loader_csp.spec.ts  loader_csp_negative.spec.ts  merkle-log.spec.ts  mlkem_suite.spec.ts  poly1305.spec.ts  pool.spec.ts  pool_csp.spec.ts  pool_dispose.spec.ts  ratchet.spec.ts  seal.spec.ts  sealstream_kat.spec.ts  sealstream_serpent_kat.spec.ts  sealstream_xchacha_kat.spec.ts  serpent_ctr.spec.ts  serpent_iv.spec.ts  serpent_kat.spec.ts  serpent_large_pool.spec.ts  serpent_montecarlo.spec.ts  serpent_nessie.spec.ts  serpent_simd_bench.spec.ts  serpent_simd_cbc.spec.ts  serpent_simd_ctr.spec.ts  serpent_stream_pool.spec.ts  sha256.spec.ts  sha3.spec.ts  sha512.spec.ts  sign_envelope.spec.ts  sign_stream.spec.ts  worker_context.spec.ts  xchacha20.spec.ts  xchacha20_pool.spec.ts
test/unit/: errors.test.ts  fortuna.test.ts  helpers.ts  init.test.ts  utils.test.ts
test/vectors/: README.md  SHA256SUMS  aes.ts  aes_cbc.ts  aes_ctr.ts  aes_gcm.ts  aes_gcm_siv.ts  argon2id.ts  blake3.ts  blake3_compress4.ts  chacha20.ts  cosig_message.ts  cosig_payload.ts  cosigned_message.ts  ecdsa_p256.ts  ecdsa_p256_keygen.ts  ecdsa_p256_siggen.ts  ecdsa_p256_sigver.ts  ecdsa_p256_wycheproof.ts  ed25519.ts  ed25519_keygen.ts  ed25519_siggen.ts  ed25519_sigver.ts  fortuna_kat.ts  kmac.ts  kyber.ts  kyber_encapdecap.ts  kyber_keygen.ts  merkle_blake3.ts  merkle_checkpoint.ts  merkle_consistency.ts  merkle_inclusion.ts  merkle_sha256.ts  merkle_signed_note.ts  mldsa.ts  mldsa_keygen.ts  mldsa_siggen_kats.ts  mldsa_sigver.ts  mlkem.ts  polyval.ts  (+32 more)
(+454 files in other folders)
