[package]
name        = "verify-vectors"
version     = "0.1.0"
edition     = "2021"
description = "Independent Rust verifier for leviathan-crypto's test vectors"
publish     = false

[[bin]]
name = "verify-vectors"
path = "src/main.rs"

# Exact-version pinning. Verifier dependencies are part of the audit surface;
# we do not silently consume new versions. CI's Cargo.lock plus this exact
# pin gives belt-and-suspenders reproducibility.
#
# All deps are pinned with `=X.Y.Z` and `default-features = false`; only the
# minimum feature set the verifier actually uses is enabled. Per-crate notes
# describe what each dep oracles (which .ts vector file or wire-format step)

[dependencies]
# RFC 8439 ChaCha20-Poly1305: exercised by the seal_xchacha_v3 and
# sealstream_xchacha_v3 verifiers (per-chunk AEAD). `alloc` enables the
# Aead trait's Vec-returning encrypt() / decrypt().
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }
# RFC 5869 HKDF: used as the key-derivation step for both XChaCha20 v3
# (HKDF-SHA-256, 64-byte stream key + commitment) and Serpent v3 (HKDF-SHA-256,
# 96-byte enc/mac/iv split). Pairs with `sha2` below.
hkdf             = { version = "=0.12.4", default-features = false }
# RFC 2104 HMAC: used by Serpent v3 for per-chunk MAC tags
# (HMAC-SHA-256 over header‖chunkIndex‖chunkLen‖ciphertext).
hmac             = { version = "=0.12.1", default-features = false }
# FIPS 180-4 SHA-256: the hash primitive feeding `hkdf` and `hmac` above.
# Indirectly required by every seal/sealstream verifier.
sha2             = { version = "=0.10.9", default-features = false }
# Serpent block cipher (NIST natural byte order): exercised by the
# Serpent v3 seal + sealstream verifiers via hand-rolled CBC chaining
# in src/serpent.rs.
serpent          = { version = "=0.6.0",  default-features = false }
# RustCrypto AES-GCM-SIV: RFC 8452 oracle for aes_gcm_siv.ts vectors.
# `aes` feature pulls in the RustCrypto `aes` backend (Aes128GcmSiv +
# Aes256GcmSiv types); `alloc` enables the Aead trait's Vec-returning
# encrypt() / decrypt(). Both are needed by the verifier.
aes-gcm-siv      = { version = "=0.11.1", default-features = false, features = ["aes", "alloc"] }
# RustCrypto POLYVAL: RFC 8452 §3 / Appendix A oracle for polyval.ts hash trace.
polyval          = { version = "=0.7.1",  default-features = false }
# AES + AES-mode crates from RustCrypto. Used to cross-verify the
# pre-existing AES vector corpus (aes.ts, aes_cbc.ts, aes_ctr.ts,
# aes_gcm.ts) against an independent implementation lineage. The
# `block-padding`/`alloc` features on `cbc` give us the
# `encrypt_padded_vec::<NoPadding>` helper used by the CBC verifier;
# `alloc` on `aes-gcm` enables the Aead trait's Vec-returning
# encrypt() / decrypt() (same shape as `aes-gcm-siv`).
aes              = { version = "=0.9.0",  default-features = false }
cbc              = { version = "=0.2.0",  default-features = false, features = ["block-padding", "alloc"] }
ctr              = { version = "=0.10.0", default-features = false }
aes-gcm          = { version = "=0.10.3", default-features = false, features = ["aes", "alloc"] }
# RustCrypto ML-KEM (FIPS 203 final): independent-lineage oracle for
# kyber_keygen.ts and kyber_encapdecap.ts. `hazmat` exposes
# `EncapsulationKey::encapsulate_deterministic(m)` so ACVP-supplied
# message values reproduce the published ciphertext byte-for-byte; the
# default `from_seed(d || z)` already gives deterministic keygen.
ml-kem           = { version = "=0.3.0",  default-features = false, features = ["hazmat"] }
# RustCrypto ML-DSA (FIPS 204 final): independent-lineage oracle for
# mldsa_keygen.ts, mldsa_siggen.ts, and mldsa_sigver.ts. `rand_core`
# enables `sign_mu_randomized(mu, &mut rng)` which the verifier feeds a
# deterministic mock RNG so ACVP `rnd` values reproduce hedged
# externalMu signatures exactly. `pkcs8` and `alloc` are not needed.
# Note: rc.4 fixed GHSA-5x2r-hc65-25f9 (hint-index acceptance);
# the pinned rc.9 includes that fix.
ml-dsa           = { version = "=0.1.0-rc.9", default-features = false, features = ["rand_core"] }
# rand_core 0.10 traits: needed to implement a deterministic CryptoRng
# that returns ACVP-supplied rnd bytes for ml-dsa's sign_mu_randomized.
rand_core        = { version = "=0.10.1", default-features = false }
# hybrid-array 0.4 — provides the typed-array form (`Array<u8, U64>`) that
# ml-dsa uses for B32 / B64. ml-dsa exposes B32 publicly but B64 is
# `pub(crate)`; we construct the equivalent `Array<u8, U64>` value from a
# fixed [u8; 64] for the externalMu sigGen / sigVer paths.
# Note: this dep is only present because of the B64 visibility restriction.
# If a future ml-dsa release lifts that restriction (re-exports B64 or
# accepts a `[u8; 64]` directly on sign_mu_*), this dep becomes redundant
# and should be dropped at the next bump.
hybrid-array     = { version = "=0.4.11", default-features = false }
# RustCrypto sha2 / sha3 hash families: HashML-DSA pre-hash mode in
# mldsa_siggen.ts / mldsa_sigver.ts requires hashing the message with
# SHA2-{224,256,384,512,512/224,512/256}, SHA3-{224,256,384,512}, or
# SHAKE-{128,256} before formatting M' = 0x01 || ctxLen || ctx ||
# OID(hashAlg) || H(M). `sha2` is already pinned above for HKDF/HMAC
# but the SHA-512/224 + SHA-512/256 variants live in this crate too;
# `sha3` is added for the SHA-3 family + SHAKE.
sha3             = { version = "=0.11.0", default-features = false }
# tiny-keccak: oracle for kmac.ts (all six variants: cSHAKE128/256,
# KMAC128/256, KMACXOF128/256). This is the only verifier dep outside
# the RustCrypto family. The reason is crate availability, not
# preference: RustCrypto's `kmac` crate is a 0.0.0 placeholder, and the
# pinned `sha3 = "=0.11.0"` does not expose `CShake`. tiny-keccak
# implements both KMAC and cSHAKE in one crate over its own
# Keccak[1600] permutation — a separate lineage from RustCrypto's
# `sha3`, which keeps the "independent of leviathan-crypto's WASM
# stack" claim intact for the SP 800-185 corpus.
tiny-keccak      = { version = "=2.0.2",  default-features = false, features = ["cshake", "kmac"] }
# Hex codec used everywhere we surface bytes in logs (computed/expected
# diffs, header dumps). `std` so we can return the standard `String`
# type from `hex::encode`.
hex              = { version = "=0.4.3",  default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto       = true
